# mosze-semester-project-bagira

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  Story.json  Test.cpp  a.out  demo-test.cc  main.cpp
include/: Character.cpp  Character.h  Game.cpp  Game.h  Option.cpp  Option.h  Page.cpp  Page.h  User.h
